--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Merge branch
         run: |
-          git config --global user.email subhasishbiswas15@gmail.com"
+          git config --global user.email "subhasishbiswas15@gmail.com"
           git config --global user.name "SUBHASISHBISWAS"
           git checkout master
           git merge ${{ github.event.ref }}
