--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -16,6 +16,6 @@ jobs:
         run: |
           git config --global user.email "subhasishbiswas15@gmail.com"
           git config --global user.name "SUBHASISHBISWAS"
-          git checkout master
+          git checkout main
           git merge ${{ github.event.ref }}
           git push
