--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -18,4 +18,4 @@ jobs:
           git config --global user.name "SUBHASISHBISWAS"
           git checkout main
           git merge ${{ github.event.ref }}
-          git push
+          git push --set-upstream origin main
