--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -2,8 +2,8 @@ name: Merge to master
 
 on:
   push:
-    branches:
-      - '*'
+    branches-ignore:
+      - master # This prevents the workflow from running on pushes to master
 
 jobs:
   merge:
@@ -11,11 +11,17 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          ref: ${{ github.head_ref }} # This checks out the source branch of the push
 
-      - name: Merge branch
+      - name: Set up Git
         run: |
           git config --global user.email "subhasishbiswas15@gmail.com"
           git config --global user.name "SUBHASISHBISWAS"
-          git checkout main
-          git merge ${{ github.event.ref }}
-          git push
+
+      - name: Merge branch to master
+        run: |
+          git fetch origin master
+          git checkout master
+          git merge --no-ff "${GITHUB_REF#refs/heads/}" # This extracts the branch name
+          git push origin master
