--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Merge branch to master
         run: |
-          git fetch origin master
-          git checkout master
+          git fetch origin main
+          git checkout main
           git merge --no-ff "${GITHUB_REF#refs/heads/}" # This extracts the branch name
-          git push origin master
+          git push origin main
