--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -24,4 +24,4 @@ jobs:
           git fetch origin
           git checkout main
           git merge --no-ff "${{ github.event.ref_name }}" # Updated to use the correct context
-          git push origin main
+          git push main
