--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Merge branch to main
         run: |
-          git fetch origin
+          git fetch origin main
           git checkout main
-          git merge --no-ff "${{ github.event.ref_name }}" # Updated to use the correct context
-          git push main
+          git merge --no-ff "${{ github.ref }}" # Updated to use the correct context
+          git push origin main
