--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -1,9 +1,9 @@
-name: Merge to master
+name: Merge to main
 
 on:
   push:
     branches-ignore:
-      - master # This prevents the workflow from running on pushes to master
+      - main # This prevents the workflow from running on pushes to main
 
 jobs:
   merge:
@@ -19,9 +19,9 @@ jobs:
           git config --global user.email "subhasishbiswas15@gmail.com"
           git config --global user.name "SUBHASISHBISWAS"
 
-      - name: Merge branch to master
+      - name: Merge branch to main
         run: |
-          git fetch origin
+          git fetch origin main
           git checkout main
-          git merge --no-ff "${GITHUB_REF#refs/heads/}" # This extracts the branch name
+          git merge --no-ff --allow-unrelated-histories "${{ github.ref }}" # Corrected to use github.ref and allow unrelated histories
           git push origin main
