--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -25,3 +25,5 @@ jobs:
           git checkout main
           git merge --no-ff --allow-unrelated-histories "${{ github.ref }}" # Corrected to use github.ref and allow unrelated histories
           git push origin main
+        env:
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN_GITHUB }} # Use the provided GITHUB_TOKEN
