--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -26,4 +26,4 @@ jobs:
           git merge --no-ff --allow-unrelated-histories "${{ github.ref }}" # Corrected to use github.ref and allow unrelated histories
           git push origin main
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Use the provided GITHUB_TOKEN
+          GITHUB_TOKEN: ${{ github.token }} # Use the provided GITHUB_TOKEN
